--- a/docsrc/credits.html
+++ b/docsrc/credits.html
@@ -168,7 +168,10 @@ include, by alphabetical order&nbsp;:
 
 <p><dl>
 
-<dt>Joseph Carter <code>&lt;knghtbrd@debian.org&gt;</code>
+<dt>Andrew Apted
+<dd>Testing (Final Doom).
+
+<br><br><dt>Joseph Carter <code>&lt;knghtbrd@debian.org&gt;</code>
 <dd>Debian package. Convinced me to support
 <code>/usr/local/share/man/</code>. Put up with my sick makefiles.
 
@@ -201,6 +204,9 @@ BSP&nbsp;2.3. Wrote <a href="http://lxdoom.linuxgames.com/">LxDoom</a>.
 
 <br><br><dt>Len Pitre
 <dd>Helped with Strife support.
+
+<br><br><dt>"Ras2"
+<dd>Testing and bug reports.
 
 <br><br><dt>Josh R. Ray <code>&lt;joshray@prodigy.net&gt;</code> (JRR)
 <dd>Encouragements.
