--- a/docsrc/credits.html
+++ b/docsrc/credits.html
@@ -13,6 +13,12 @@
 <br>
 <br>
 
+<em>
+  The email addresses have been anti-spammed. To demangle, reverse,
+  apply rot13 (exchange a and n, b and o, etc), replace the equal sign
+  by a at and replace the plus signs in the domain by dots.
+</em>
+
 		<h2>DEU</h2>
 
 <p>Yadex is derived from DEU 5.21 that was written by Raphaël
@@ -24,11 +30,11 @@ not kindly released the source code, Yadex wouldn't exist.
 
 <p><pre>* Everybody at id Software for making such great games!
 
-* Brendon Wyber                   (b.wyber@csc.canterbury.ac.nz)
+* Brendon Wyber                   (ma+pn+lehoerganp+pfp=erolj.o)
      The first version of this program was written by Brendon Wyber.
      Map display, Things editor.
 
-* Raphaël Quinet                  (quinet@montefiore.ulg.ac.be)
+* Raphaël Quinet                  (ro+pn+tyh+rebvsrgabz=gravhd)
      Much of this program was written by Raphaël Quinet.
      New interface (mouse, menus, etc).
      Ability to edit Vertices, Linedefs, Sidedefs, Sectors, and last
@@ -36,11 +42,11 @@ not kindly released the source code, Yadex wouldn't exist.
      Even if I rewrote nearly 90% of the code, this editor still has its
      strong DEU roots... :-)
 
-* Matt Fell                       (matt.burnett@acebbs.com)
+* Matt Fell                       (zbp+foorpn=ggraeho.ggnz)
      Author of the great Unofficial Doom Specs.  Making this program
      would have been impossible if the Specs didn't exist.
 
-* Steve Bareman                   (bareman@hope.cit.hope.edu)
+* Steve Bareman                   (hqr+rcbu+gvp+rcbu=anzreno)
      Rewrote the documentation (this file and DEU.TXT)
      Author of the DEU tutorial (look in the TUTOR directory).
      Constant promoter of including source code with the editor.
@@ -49,29 +55,29 @@ not kindly released the source code, Yadex wouldn't exist.
         (Registered DOOM patches, DEU, and various doom utils for
          Registered DOOMers only.)
 
-* Trevor Phillips                 (rphillip@cc.curtin.edu.au)
+* Trevor Phillips                 (hn+hqr+avgehp+pp=cvyyvuce)
      Textures viewer in 256 colors
      Many, many suggestions and improvements to the DEU code.
 
-* Alistair Brown                  (A.D.Brown@bradford.ac.uk)
-* Chris Phillips                  (chrisp@halcyon.com)
-* Colin Reed                      (colin@argonaut.co.uk)
-* Dylan Cuthbert                  (dyl@cix.compulink.co.uk)
+* Alistair Brown                  (xh+pn+qebsqneo=ajbeB.D.A)
+* Chris Phillips                  (zbp+ablpynu=cfveup)
+* Colin Reed                      (xh+bp+ghnabten=avybp)
+* Dylan Cuthbert                  (xh+bp+xavyhczbp+kvp=ylq)
      Lots of infos about the Nodes objects.
      They fixed the bug(s) in my Nodes builder.
      Looking for cute Doom add-ons?  Get BSP and ZAMBONY!
 
-* Dewi Morgan                     (D.Morgan@bradford.ac.uk)
+* Dewi Morgan                     (xh+pn+qebsqneo=antebM.D)
      Drop-down menus and menu bar.
      Rewrote and reorganized part of this file.
      Numerous improvements and suggestions.
      Now working on a GIF support for DEU.
 
-* Will Ellett                     (wellett@cs.uah.edu)
+* Will Ellett                     (hqr+unh+fp=ggryyrj)
      Configuration file (DEU.INI) and better command line parsing.
      Lots of suggestions for DEU.
 
-* Barry Bloom                     (barry@noc.unt.edu)
+* Barry Bloom                     (hqr+gah+pba=leeno)
      Maintainer of the official DEU distribution site for the USA:
           the best DOOM FTP server: infant2.sphs.indiana.edu
           (DOOM add-ons and utils, collection of WAD files, ...)
@@ -79,71 +85,71 @@ not kindly released the source code, Yadex wouldn't exist.
      The first martyr of the DOOM cause: his first ftp site (ocf.unt.edu)
      has been closed by short-minded academic authorities.  &lt;sob!&gt;
 
-* Sven Neuhaus                    (sven@lilly.ping.de)
-* Billy Chow                      (billy.chow@engineering.oxford.ac.uk)
+* Sven Neuhaus                    (rq+tavc+lyyvy=arif)
+* Billy Chow                      (xh+pn+qebskb+taverravtar=jbup.lyyvo)
      The most efficient beta-testers!  They keep on finding bugs that
      most other people never see...
 
-* Jeremy Blackman                 (ranma@eskinews.eskimo.com)
-* Brian Downing                   (bdowning@ncsa.uiuc.edu)
-* Ted Vessenes                    (tedv@geom.umn.edu)
-* Ed Boling                       (edb9140@tamsun.tamu.edu)
+* Jeremy Blackman                 (zbp+bzvxfr+fjravxfr=nzane)
+* Brian Downing                   (hqr+phvh+nfpa=tavajbqo)
+* Ted Vessenes                    (hqr+azh+zbrt=iqrg)
+* Ed Boling                       (hqr+hzng+ahfzng=0419oqr)
 * Greg Grimsby                    (no more E-mail address &lt;sob!&gt;)
-* Michael Emmons                  (ie78hc0z@solix.fiu.edu)
-* Ryan Budney                     (rybu@jazz.math.ualberta.ca)
-* Cameron Newham                  (cam@iinet.com.au)
+* Michael Emmons                  (hqr+hvs+kvybf=m0pu87rv)
+* Ryan Budney                     (np+ngeroynh+ugnz+mmnw=hole)
+* Cameron Newham                  (hn+zbp+gravv=znp)
      Numerous comments, suggestions for improvements, and bug reports.
      They were amongst the first to have faith in DEU and support it.
 
-* Tom Neff                        (tneff@panix.com)
+* Tom Neff                        (zbp+kvanc=ssrag)
      Not only a good beta-tester, but also the author of the WIF Specs,
      a text interchange format for Doom levels, based on the DWD files
      used internally by id Software.
 
-* Dietrich Hempelmann             (avatar@uni-paderborn.de)
+* Dietrich Hempelmann             (rq+aeboerqnc-vah=engnin)
      Designed the "DEU 5" logo in DEU.TXT.  Great ascii-art... 
 
-* Jean-Serge Gagnon               (jsg8a@acadvm1.uottawa.ca)
+* Jean-Serge Gagnon               (np+njnggbh+1ziqnpn=n8tfw)
      Helped Steve with the docs and improved the DEU tutorial.
      If you want to see a good WAD file, get FOREST.WAD...
 
-* Sean Malloy                     (malloy@crash.cts.com)
+* Sean Malloy                     (zbp+fgp+ufnep=lbyynz)
      Updated the docs for the stairs, sent some interesting suggestions
      and bug reports.  Improved display of the LineDef flags, etc.
 
-* Christian Johannes Sladetsch    (s924706@yallara.cs.rmit.oz.au)
+* Christian Johannes Sladetsch    (hn+mb+gvze+fp+nenyynl=607429f)
      Better texture display, XMS support (memory swapping).
 
-* Craig Smith                     (bcs@cs.tamu.edu)
+* Craig Smith                     (hqr+hzng+fp=fpo)
      Ideas for improvements in the memory allocation routines.
 
-* Tim Dedischew                   (kfdedisc@vela.acs.oakland.edu)
+* Tim Dedischew                   (hqr+qanyxnb+fpn+nyri=pfvqrqsx)
      Working on a realistic 3D previewer for DEU.
 
-* Tobias Ringström                (d2rinto@dtek.chalmers.se)
+* Tobias Ringström                (rf+ferzynup+xrgq=bgave2q)
      Added the code to distribute floors and ceiling heights.
 
-* Robert Hodkinson                (R.J.Hodkinson@bradford.ac.uk)
+* Robert Hodkinson                (xh+pn+qebsqneo=abfavxqbH.J.R)
      Texture alignment (X offset).
 
-* Per Allanson                    (c91peral@und.ida.liu.se)
+* Per Allanson                    (rf+hvy+nqv+qah=ynerc19p)
      Ported DEU 5.x to GCC + GO32 (DGJPP).
 
-* Per Kofod                       (per@ollie.dnk.hp.com)
+* Per Kofod                       (zbp+cu+xaq+rvyyb=erc)
      Added the code to display the pointer coords.  Sent some bug reports
      and suggestions for improvements.
 
-* Jim Pitts                       (pitts@mimosa.astro.indiana.edu)
+* Jim Pitts                       (hqr+nanvqav+begfn+nfbzvz=fggvc)
      Maintainer of the 'infant2' FTP site.  Our salvation when the UNT
      authorities closed the 'ocf' DOOM-only FTP site.  Thanks, Jim!
 
-* Andy Sherwood                   (enigma@indirect.com)
+* Andy Sherwood                   (zbp+gprevqav=nztvar)
      Patch for Cirrus Logic cards: use the hardware cursor for the mouse.
 
-* "Dino"                          (s.sproston-se2@cs.bham.ac.uk)
+* "Dino"                          (xh+pn+znuo+fp=2rf-abgfbecf.f)
      Found 35 new LineDef types!  New ways to raise or lower floors, etc.
 
-* Hank Leukart                    (ap641@cleveland.freenet.edu)
+* Hank Leukart                    (hqr+grarres+qanyriryp=146cn)
      Author of the DOOM FAQ.  Publisher of Matt's Unofficial DOOM Specs.
      He was (and still is) one of the best promoters of DOOM on the net.
 </pre>
@@ -177,18 +183,18 @@ not kindly released the source code, Yadex wouldn't exist.
 include, by alphabetical order&nbsp;:
 
 <p><dl>
-  <dt>Joseph Carter <code>&lt;knghtbrd@debian.org&gt;</code>
+  <dt>Joseph Carter <code>&lt;teb+anvorq=qeogutax&gt;</code>
   <dd>Debian package. Convinced me to support
     <code>/usr/local/share/man/</code>. Put up with my sick makefiles.
 
-  <br><br><dt>Ben Davies <code>&lt;d3095027@bohm.anu.edu.au&gt;</code> (BD)
+  <br><br><dt>Ben Davies <code>&lt;hn+hqr+han+zubo=7205903q&gt;</code> (BD)
   <dd>A post by him and another one by Nathan Lucas in r.g.c.d.e. led to the
     development of the "save image to a file" feature. Gave thorough reports.
 
   <br><br><dt><a href="http://go.to/conmen/">Max Heijndijk</a>
   <dd>RPM package.
 
-  <br><br><dt>Joe Koperski <code>&lt;joekoperski@hotmail.com&gt;</code> (JK)
+  <br><br><dt>Joe Koperski <code>&lt;zbp+yvnzgbu=vxfercbxrbw&gt;</code> (JK)
   <dd>Encouragements.
 
   <br><br><dt>Oliver Kraus <code>&lt;lrs.e-technik.uni-erlangen.de&gt;</code>
@@ -197,24 +203,24 @@ include, by alphabetical order&nbsp;:
   <br><br><dt>Ingo van Lil
   <dd>Bug reports and suggestions.
 
-  <br><br><dt>Udo Munk <code>&lt;um@compuserve.com&gt;</code> (UM)
+  <br><br><dt>Udo Munk <code>&lt;zbp+rierfhczbp=zh&gt;</code> (UM)
   <dd>Requested scrolling with arrow keys and possibility to disable the
     autoscrolling. Helped a lot with Final Doom compatibility and porting
     issues. Wrote <a
     href="ftp://3darchives.in-span.net/pub/idgames/source/">XDoom</a> and <a
     href="ftp://3darchives.in-span.net/pub/idgames/source/">Xwadtools</a>.
 
-  <br><br><dt>Kim "Sparky" Parrott <code>&lt;kelm@eisa.net.au&gt;</code>
+  <br><br><dt>Kim "Sparky" Parrott <code>&lt;hn+gra+nfvr=zyrx&gt;</code>
   <dd>Indirect bug report.
 
-  <br><br><dt><a href="http://members.xoom.com/colin_phipps/">Colin Phipps </a>
+  <br><br><dt><a href="http://www.cph.demon.co.uk/">Colin Phipps </a>
   <dd>FreeBSD testing. Wrote the <a
     href="http://lxdoom.linuxgames.com/notes.html#bsp">fix</a> for <a
     href="http://www.teaser.fr/~amajorel/doom/bsp23bug.zip">two bugs</a> in
     BSP&nbsp;2.3. Wrote <a href="http://lxdoom.linuxgames.com/">LxDoom</a>. Now
     maintains <a href="http://doombsp.sourceforge.net/">BSP</a>.
 
-  <br><br><dt><a href="http://www.crosswinds.net/~thearchon/">Len Pitre</a>
+  <br><br><dt><a href="http://s91291220.onlinehome.us/">Len Pitre</a>
   <dd>Helped with Strife support.
 
   <br><br><dt>Jérôme Raciazek
@@ -224,7 +230,7 @@ include, by alphabetical order&nbsp;:
   <dd>More bug reports than everybody else combined. Provides a mirror of the
     web page.
 
-  <br><br><dt>Josh R. Ray <code>&lt;joshray@prodigy.net&gt;</code> (JRR)
+  <br><br><dt>Josh R. Ray <code>&lt;gra+ltvqbec=lneufbw&gt;</code> (JRR)
   <dd>Encouragements.
 
   <br><br><dt>Vedran Rodic (VR)
@@ -235,7 +241,7 @@ include, by alphabetical order&nbsp;:
   <dd>The first to report the compilation error in <code>bitvec.h</code>.
 
   <br><br><dt>Jan Van der Veken
-  <code>&lt;jan.van.der.veken@village.uunet.be&gt;</code> (JVDV)
+  <code>&lt;ro+grahh+rtnyyvi=arxri.erq.ani.anw&gt;</code> (JVDV)
   <dd>Requested the "brighten or darken sectors" function, single-key linedef
     splitting, single-key linedefs of sector splitting and scrolling with arrow
     keys.
@@ -243,22 +249,25 @@ include, by alphabetical order&nbsp;:
   <br><br><dt>The Wildman
   <dd>Encouragements.
 
-  <br><br><dt>Jonathan Wilson <code>&lt;wilsonj@xoommail.com&gt;</code>.
+  <br><br><dt>Jonathan Wilson <code>&lt;zbp+yvnzzbbk=wabfyvj&gt;</code>.
   <dd>Figured out the picture format for the Doom alpha and press release
     versions and told us about it on rgcde. Without him, Yadex probably
     wouldn't support them.
 
-  <br><br><dt>Pierre Baillargeon <code>&lt;pb@artquest.net&gt;</code>
-  <dt>Carl Barron <code>&lt;cbarron3@ix.netcom.com&gt;</code>
-  <dt>David Ferguson <code>&lt;DavidFerguson@NOcsiSPAM.com&gt;</code>
-  <dt>John Potter <code>&lt;jpotter@falcon.lhup.edu&gt;</code>
-  <dt>Atgeirr F. Rasmussen <code>&lt;atgeirr@sintef.no&gt;</code>
-  <dt>Ivan Vecerina <code>&lt;ivec@mail.com&gt;</code>
+  <br><br><dt>Pierre Baillargeon <code>&lt;gra+gfrhdgen=oc&gt;</code>
+  <dt>Carl Barron <code>&lt;zbp+zbpgra+kv=3abeenop&gt;</code>
+  <dt>David Ferguson <code>&lt;zbp+MAPSvfpON=abfhterFqvinD&gt;</code>
+  <dt>John Potter <code>&lt;hqr+chuy+abpyns=erggbcw&gt;</code>
+  <dt>Atgeirr F. Rasmussen <code>&lt;ba+srgavf=eevrtgn&gt;</code>
+  <dt>Ivan Vecerina <code>&lt;zbp+yvnz=priv&gt;</code>
   <dd>C++ help.
 
   <br><br><dt>Benjamin Bayart
   <dt>Ouafae Kotby
   <dd><code>diff</code> consulting.
+
+  <br><br><dt>Barry Mead
+  <dd>Reported many errors in <code>heretic.ygd</code>.
 
 </dl></p>
 
