Add in a 3D preview function.
Pressing the 'R' key brings up the preview window, and you can move
about with the cursor keys.

--- a/docsrc/index.html
+++ b/docsrc/index.html
@@ -34,6 +34,7 @@
 
 <ul>
 <li><a href="palette.html">Palette viewer</a>
+<li><a href="preview.html">3D Level Preview</a>
 <li><a href="advanced.html">Advanced user's guide</a>
 <li><a href="../TODO"><code>TODO</code></a>
 <li><a href="yadex.6">The man page for Yadex</a>
